# transcript-combobulator

./: .env.example  .env.jfk-sample  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  transcribe.py
.claude/: settings.local.json
docs/: AGENTS.md  CLAUDE.md  EXAMPLES.md  PARALLELIZATION_PLAN.md  README.md  TECHNICAL.md
src/: __init__.py  audio_utils.py  combine.py  config.py  logging_config.py  process_audio.py  transcribe.py  vad.py  whisper.py  whisper_cpp.py
src/utils/: __init__.py  logging.py
tests/: conftest.py  test_batch.py  test_combine.py  test_transcription.py  test_vad.py  test_whisper.py
tmp/output/example/: example-combined-1.txt  example-combined-2.txt
tmp/output/example/player0-dm/: player0-dm.vtt
tmp/output/example/player1-barbarian/: player1-barbarian.vtt
tmp/output/example/player2-druid/: player2-druid.vtt
tmp/output/example/player3-rogue/: player3-rogue.vtt
tmp/output/example/rogue/: rogue.vtt
tmp/output/examples/: dm-session.vtt  examples-combined-1.txt  examples-combined-2.txt  examples-transcript-1.txt  examples-transcript-2.txt  player1-barbarian.vtt  player2-druid.vtt  player3-rogue.vtt
tools/: convert_audio.py  create_sample_files.py  create_test_files.py  process_batch.py  process_single_file.py  setup_whisper.py  test_whisper.py
