[project]
name = "transcript-precombobulator"
version = "0.1.0"
description = "A tool to preprocess audio files for transcription by removing silence and preparing them for whisper.cpp"
authors = [
    {name = "Sean Kennedy", email = "sean@codeserious.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "openai-whisper",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "soundfile>=0.12.1",
    "python-dotenv>=1.0.0",
    "webvtt-py>=0.4.6",
    "pytest>=7.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
