[project]
name = "transcript-precombobulator"
version = "0.2.0"
description = "Pre-processes audio files for better Whisper transcription"
readme = "docs/README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
    { name = "Kennedy Smith", email = "kennedys1@users.noreply.github.com" }
]
dependencies = [
    "mypy>=1.0.0",
    "openai-whisper",
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
    "soundfile>=0.12.1",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "webvtt-py>=0.4.6",
    "silero-vad>=0.4.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://github.com/kennedys1/transcript-precombobulator"
Repository = "https://github.com/kennedys1/transcript-precombobulator.git"
Issues = "https://github.com/kennedys1/transcript-precombobulator/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
